--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
+    "nanoid": "^5.1.6",
     "nodemon": "^3.1.10",
     "zod": "^4.1.9"
   }
